[gd_scene load_steps=3 format=3 uid="uid://17vwp6di6nbj"]

[ext_resource type="FontFile" uid="uid://bu1of2kv5b13u" path="res://ScriptsAndSprites/Fonts/3270-Medium-500.ttf" id="1_rya6o"]
[ext_resource type="Script" path="res://ScriptsAndSprites/Scripts/Scene/Menu/LineEdit.gd" id="1_t38qy"]

[node name="CLI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 1

[node name="Background" type="ColorRect" parent="."]
z_index = -2
layout_mode = 0
offset_right = 200.0
offset_bottom = 150.0
color = Color(0, 0, 0, 1)

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -57.0
offset_right = -2.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rya6o")
placeholder_text = "Enter command here"
flat = true
script = ExtResource("1_t38qy")

[node name="CLUI_info" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 123.0
offset_bottom = 19.0
theme_override_fonts/font = ExtResource("1_rya6o")
theme_override_font_sizes/font_size = 0
text = "CLUI v0.316227"

[node name="Help" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -99.0
offset_right = 184.0
offset_bottom = -22.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rya6o")
text = "begin -begin fight
cntrls -show conrolls
:q -quit
sl -show leader"

[node name="Warning" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -99.0
offset_right = 196.0
offset_bottom = -22.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rya6o")
text = "Command not found!"

[node name="BestScore" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -99.0
offset_right = 196.0
offset_bottom = -82.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rya6o")
text = "CE00000000000000 - 0
"

[node name="AudioInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -99.0
offset_right = 196.0
offset_bottom = -82.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rya6o")
text = "
"

[node name="Controls" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -99.0
offset_right = 196.0
offset_bottom = -22.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rya6o")
text = "WASD -Moving
OKL: -Fire direction
space -to save score*
must stay on data save
"

[node name="player_id" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -121.0
offset_top = -17.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rya6o")
text = "__------------"

[node name="action_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="text_submitted" from="LineEdit" to="LineEdit" method="_on_text_submitted"]
